# data-producer

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  constants.rs  main.rs
src/interface/: cli.rs  interruption.rs  mod.rs  summary.rs
src/utils/: file_utils.rs  mod.rs  processors.rs  producer.rs  readers.rs
