[package]
name = "data-producer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
csv = "1"
dotenvy = "0.15"
parquet = "53"
serde = { version = "1", features = ["derive"] }
crossterm = "0.27"
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"